@@ -34,6 +34,7 @@ import java.util.Set;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
 
+
 import io.github.blackrock.protocjar.PlatformDetector;
 import io.github.blackrock.protocjar.Protoc;
 import io.github.blackrock.protocjar.ProtocVersion;
@@ -395,8 +396,8 @@ public class ProtocJarMojo extends AbstractMojo
 			for (File input : inputDirectories) {
 				getLog().info("    " + input);
 				if ("all".equalsIgnoreCase(addProtoSources) || "inputs".equalsIgnoreCase(addProtoSources)) {
-					List<String> incs = Arrays.asList("**/*" + extension);
-					List<String> excs = new ArrayList<String>();
+					var incs = List.of("**/*" + extension);
+					List<String> excs = new ArrayList<>();
 					projectHelper.addResource(project, input.getAbsolutePath(), incs, excs);
 				}
 			}
@@ -407,8 +408,8 @@ public class ProtocJarMojo extends AbstractMojo
 			for (File include : includeDirectories) {
 				getLog().info("    " + include);
 				if ("all".equalsIgnoreCase(addProtoSources)) {
-					List<String> incs = Arrays.asList("**/*" + extension);
-					List<String> excs = new ArrayList<String>();
+					var incs = List.of("**/*" + extension);
+					List<String> excs = new ArrayList<>();
 					projectHelper.addResource(project, include.getAbsolutePath(), incs, excs);
 				}
 			}
@@ -492,34 +493,30 @@ public class ProtocJarMojo extends AbstractMojo
 		for (Artifact artifact : getArtifactsForProtoExtraction(transitive)) {
 			if (artifact.getFile() == null) continue;
 			getLog().debug("  Scanning artifact: " + artifact.getFile());
-			InputStream is = null;
 			try {
 				if (artifact.getFile().isDirectory()) {
-					for (File f : listFilesRecursively(artifact.getFile(), extension, new ArrayList<File>())) {
-						is = new FileInputStream(f);
-						String name = f.getAbsolutePath().replace(artifact.getFile().getAbsolutePath(), "");
-						if (name.startsWith("/")) name = name.substring(1);
-						writeProtoFile(dir, is, name);
-						is.close();
+					for (var f : listFilesRecursively(artifact.getFile(), extension, new ArrayList<>())) {
+						try (var is = new FileInputStream(f)) {
+							var name = f.getAbsolutePath().replace(artifact.getFile().getAbsolutePath(), "");
+							if (name.startsWith("/")) name = name.substring(1);
+							writeProtoFile(dir, is, name);
+						}
 					}
 				}
 				else {
-					ZipInputStream zis = new ZipInputStream(new FileInputStream(artifact.getFile()));
-					is = zis;
-					ZipEntry ze;
-					while ((ze = zis.getNextEntry()) != null) {
-						if (ze.isDirectory() || !ze.getName().toLowerCase().endsWith(extension)) continue;
-						writeProtoFile(dir, zis, ze.getName());
-						zis.closeEntry();
-					}					
+					try (var zis = new ZipInputStream(new FileInputStream(artifact.getFile()))) {
+						ZipEntry ze;
+						while ((ze = zis.getNextEntry()) != null) {
+							if (ze.isDirectory() || !ze.getName().toLowerCase().endsWith(extension)) continue;
+							writeProtoFile(dir, zis, ze.getName());
+							zis.closeEntry();
+						}
+					}
 				}
 			}
 			catch (IOException e) {
 				getLog().info("  Error scanning artifact: " + artifact.getFile() + ": " + e);
 			}
-			finally {
-				if (is != null) is.close();
-			}			
 		}
 	}
 
@@ -539,15 +536,10 @@ public class ProtocJarMojo extends AbstractMojo
 
 	private void writeProtoFile(File dir, InputStream zis, String name) throws IOException {
 		getLog().info("    " + name);
-		File protoOut = new File(dir, name);
+		var protoOut = new File(dir, name);
 		protoOut.getParentFile().mkdirs();
-		FileOutputStream fos = null;
-		try {
-			fos = new FileOutputStream(protoOut);
-			streamCopy(zis, fos);
-		}
-		finally {
-			if (fos != null) fos.close();
+		try (var fos = new FileOutputStream(protoOut)) {
+			zis.transferTo(fos);
 		}
 	}
 
@@ -682,7 +674,7 @@ public class ProtocJarMojo extends AbstractMojo
 	}
 
 	private Collection<String> buildCommand(File file, String version, String type, String pluginPath, File outputDir, String outputOptions) throws MojoExecutionException {
-		Collection<String> cmd = new ArrayList<String>();
+		var cmd = new ArrayList<String>();
 		populateIncludes(cmd);
 		cmd.add("-I" + file.getParentFile().getAbsolutePath());
 		if ("descriptor".equals(type)) {
@@ -812,30 +804,20 @@ public class ProtocJarMojo extends AbstractMojo
 		}
 	}
 
-	static File copyFile(File srcFile, File destFile) throws IOException {		
-		FileInputStream is = null;
-		FileOutputStream os = null;
-		try {
-			is = new FileInputStream(srcFile);
-			os = new FileOutputStream(destFile);
-			streamCopy(is, os);
-		}
-		finally {
-			if (is != null) is.close();
-			if (os != null) os.close();
+	static File copyFile(File srcFile, File destFile) throws IOException {
+		try (var is = new FileInputStream(srcFile);
+			 var os = new FileOutputStream(destFile)) {
+			is.transferTo(os);
 		}
 		return destFile;
 	}
 
 	static void streamCopy(InputStream in, OutputStream out) throws IOException {
-		int read = 0;
-		byte[] buf = new byte[4096];
-		while ((read = in.read(buf)) > 0) out.write(buf, 0, read);		
+		in.transferTo(out);
 	}
 
 	static boolean isEmpty(String s) {
-		if (s != null && s.length() > 0) return false;
-		return true;
+		return s == null || s.isEmpty();
 	}
 
 	static class FileFilter implements IOFileFilter
